--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-  background-color: #fff9f9;
+  background-color: #f2f2f2;
   margin: auto 5% auto 5%;
   font-family: "Poppins", sans-serif;
   font-size: 12px;
@@ -18,6 +18,9 @@ h1 {
 h2 {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  text-align: center;
+  color: #f2f2f2;
+  background-color: #0d0d0d;
 }
 
 .header_sub {
@@ -32,18 +35,20 @@ blockquote {
   font-size: 16px;
 }
 
-figure {
-  display: block;
-  width: 90vw;
-  height: auto;
-  margin: 3rem auto 1rem auto;
-}
 .quote_caption {
   font-family: "Poppins";
   font-weight: 500;
   font-style: normal;
   font-size: 10px;
 }
+
+figure {
+  display: block;
+  width: 100vw;
+  height: auto;
+  margin: 3rem auto 1rem auto;
+}
+
 .figure_caption {
   font-family: "Poppins";
   font-weight: 600;
@@ -53,3 +58,9 @@ figure {
 .poster {
   width: 100%;
 }
+
+/* p {
+  background-color: rgb(238, 45, 45);
+  border-top-color: blue;
+}
+*/
