--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
 
 body {
   background-color: #f2f2f2;
-  margin: auto 5% auto 5%;
+  margin: 0;
   font-family: "Poppins", sans-serif;
   font-size: 12px;
 }
-
+main {
+  margin: 0;
+}
 h1 {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
@@ -17,15 +19,22 @@ h1 {
 
 h2 {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-weight: 100;
+  font-size: 18px;
   text-align: center;
   color: #f2f2f2;
   background-color: #0d0d0d;
+  background-size: cover;
 }
 
 .header_sub {
   font-family: "Poppins";
   font-weight: bold;
+  padding: 0;
+}
+
+p {
+  margin: 0 5vw 10px 5vw;
 }
 
 blockquote {
@@ -33,34 +42,54 @@ blockquote {
   font-weight: 200;
   font-style: italic;
   font-size: 16px;
+  margin: 0;
 }
 
-.quote_caption {
-  font-family: "Poppins";
-  font-weight: 500;
-  font-style: normal;
-  font-size: 10px;
+.quote {
+  margin: 0;
+  margin: 0 9vw 0 9vw;
+}
+
+q {
+  font-style: italic;
 }
 
 figure {
   display: block;
-  width: 100vw;
+  width: 100%;
   height: auto;
-  margin: 3rem auto 1rem auto;
+  margin: 0 0 10px 0;
 }
 
-.figure_caption {
+.caption {
   font-family: "Poppins";
-  font-weight: 600;
-  font-size: 10px;
+  font-weight: 400;
+  font-size: 8px;
+  margin: 0 5vw 0 5vw;
+}
+
+.caption_author {
+  font-family: "Poppins";
+  font-weight: 200;
+  font-size: 8px;
+  text-align: right;
+  margin: 0 9vw 10px 9vw;
 }
 
 .poster {
   width: 100%;
 }
 
-/* p {
-  background-color: rgb(238, 45, 45);
-  border-top-color: blue;
+.image_portrait {
+  width: 100vw;
 }
-*/
+
+hr {
+  border: none;
+}
+hr::before {
+  content: "***";
+  display: block;
+  text-align: center;
+  padding: 10px 0 10px 0;
+}
