--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee&display=swap");
 
 body {
   background-color: #f2f2f2;
@@ -8,23 +8,46 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 12px;
 }
-main {
-  margin: 0;
-}
-h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  font-size: 30px;
-}
 
-h2 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 100;
-  font-size: 18px;
+h1 {
   text-align: center;
   color: #f2f2f2;
   background-color: #0d0d0d;
   background-size: cover;
+  padding: 10px 0 10px 0;
+}
+
+.h_r {
+  font-family: "Bungee";
+  font-size: 70px;
+  height: fit-content;
+  line-height: 1;
+  margin: 0;
+}
+
+.h_c {
+  font-family: "Bungee";
+  font-size: 35px;
+  height: fit-content;
+  line-height: 1;
+}
+
+.h_year {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: 10px;
+  padding: 10px 0 0 0;
+}
+
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  text-align: center;
+  color: #f2f2f2;
+  background-color: #0d0d0d;
+  background-size: cover;
+  padding: 1px 0 1px 0;
 }
 
 .header_sub {
@@ -91,5 +114,5 @@ hr::before {
   content: "***";
   display: block;
   text-align: center;
-  padding: 10px 0 10px 0;
+  padding: 15px 0 5px 0;
 }
