--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ h1 {
   background-color: #0d0d0d;
   background-size: cover;
   padding: 10px 0 10px 0;
+  margin: 0;
 }
 
 .h_r {
@@ -79,9 +80,9 @@ q {
 
 figure {
   display: block;
-  width: 100%;
-  height: auto;
-  margin: 0 0 10px 0;
+  width: 100vw;
+  height: fit-content;
+  margin: 0;
 }
 
 .caption {
@@ -103,6 +104,10 @@ figure {
   width: 100%;
 }
 
+.headline {
+  width: 100%;
+  margin: 0;
+}
 .image_portrait {
   width: 100vw;
 }
